--- a/public_html/contact.html
+++ b/public_html/contact.html
@@ -24,19 +24,19 @@
           </a>
       
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="index.html" class="nav-link px-2 text-white">Home</a></li>
-            <li><a href="about.html" class="nav-link px-2 text-white">About</a></li>
+            <li><a href="home" class="nav-link px-2 text-white">Home</a></li>
+            <li><a href="about" class="nav-link px-2 text-white">About</a></li>
             <!--<li><a href="projects.html" class="nav-link px-2 text-white">Projects</a></li>-->
-            <li><a href="service.html" class="nav-link px-2 text-white">Service</a></li>
+            <li><a href="service" class="nav-link px-2 text-white">Service</a></li>
           </ul>
           <div class="text-end">
-            <a href="join.html"><button type="button" class="btn btn-outline-light me-2">Join Now</button></a>
+            <a href="join"><button type="button" class="btn btn-outline-light me-2">Join Now</button></a>
             <button id="theme-toggle-button" onclick="switchMode()"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-moon-fill" viewBox="0 0 16 16">
               <path d="M6 .278a.77.77 0 0 1 .08.858 7.2 7.2 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277q.792-.001 1.533-.16a.79.79 0 0 1 .81.316.73.73 0 0 1-.031.893A8.35 8.35 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.75.75 0 0 1 6 .278"/>
             </svg></button>
           </div>
         </div>
-      </header>   
+      </header>
       <footer>
         <p>&copy; 2024 Coding Club Reno &middot; <a href="#"></p>
       </footer>
