--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,101 +1,144 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" x-data="{ darkMode: localStorage.getItem('theme') === 'dark' || (!localStorage.getItem('theme') && window.matchMedia('(prefers-color-scheme: dark)').matches), menuOpen: false, scrolled: false }" x-init="$watch('darkMode', val => localStorage.setItem('theme', val ? 'dark' : 'light'))" x-bind:class="{ 'dark': darkMode }" @scroll.window="scrolled = window.pageYOffset > 50">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Coding Club Reno is a community of programmers who believe in project-based learning and community service. Join us to learn and grow together!">
-  <meta name="keywords" content="coding, programming, community, projects, service, learning, club, reno, volunteer, development">
-  <meta name="author" content="Coding Club Reno">
-  <meta name="robots" content="index, follow">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Coding Club Reno</title>
-  <script src="js/dark-mode.js"></script>
-  <script src="js/animations.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" type="image/x-icon" href="images/codingrenologo.png">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      darkMode: 'class',
+      theme: { extend: { fontFamily: { sans: ['Inter', 'sans-serif'] } } }
+    };
+  </script>
+  <!-- Alpine.js -->
+  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+  <!-- GSAP & Vanta.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/ScrollTrigger.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+  <style>
+    /* Smooth scrolling */
+    html { scroll-behavior: smooth; }
+  </style>
 </head>
-<body>
-  <header class="p-3 text-bg-dark">
-    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-      <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-        <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+<body class="bg-gray-50 text-gray-900 dark:bg-gray-900 dark:text-gray-100 font-sans">
+
+  <!-- Navigation Bar -->
+  <nav class="fixed w-full top-0 z-50 transition-all duration-300" :class="scrolled ? 'backdrop-blur-lg bg-white/70 dark:bg-gray-900/70 shadow-lg' : 'bg-transparent'">
+    <div class="container mx-auto flex items-center justify-between px-6" :class="scrolled ? 'py-2' : 'py-4'">
+      <a href="#hero" class="text-2xl font-semibold">CodeClub Reno</a>
+      <!-- Desktop Links -->
+      <div class="hidden md:flex items-center space-x-8">
+        <a href="#projects" class="hover:text-blue-500 transition">Projects</a>
+        <a href="#community" class="hover:text-blue-500 transition">Community</a>
+        <a href="#present" class="hover:text-blue-500 transition">Present</a>
+        <a href="join.html" class="px-5 py-2 bg-gradient-to-r from-blue-500 to-indigo-500 text-white rounded-full shadow-lg hover:opacity-90 transition">Join Now</a>
+        <button @click="darkMode = !darkMode" class="p-2 rounded-full bg-gray-200 dark:bg-gray-700 hover:opacity-80 transition">
+          <svg x-show="!darkMode" xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path d="M12 3v1m0 16v1m9-9h-1M4 12H3" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
+          </svg>
+          <svg x-show="darkMode" xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path d="M20.354 15.354A9 9 0 018.646 3.646 9 9 0 0012 21a9 9 0 008.354-5.646z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
+          </svg>
+        </button>
+      </div>
+      <!-- Mobile Menu Button -->
+      <button @click="menuOpen = !menuOpen" class="md:hidden focus:outline-none">
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+      </button>
+    </div>
+    <!-- Mobile Menu -->
+    <div x-show="menuOpen" x-transition class="bg-white dark:bg-gray-800 px-6 py-4 space-y-3 md:hidden">
+      <a href="#projects" @click="menuOpen = false" class="block">Projects</a>
+      <a href="#community" @click="menuOpen = false" class="block">Community</a>
+      <a href="#present" @click="menuOpen = false" class="block">Present</a>
+      <a href="#join.html" @click="menuOpen = false" class="block">Join Now</a>
+      <button @click="darkMode = !darkMode" class="flex items-center mt-2 space-x-2">
+        <svg x-show="!darkMode" xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path d="..."/></svg>
+        <span>Toggle Theme</span>
+      </button>
+    </div>
+  </nav>
+
+  <!-- Hero Section -->
+  <section id="hero" class="relative h-screen flex items-center justify-center overflow-hidden">
+    <div id="vanta-bg" class="absolute inset-0"></div>
+    <div class="absolute inset-0 bg-black/50"></div>
+    <div class="relative z-10 text-center px-6">
+      <h1 class="text-5xl md:text-6xl font-bold mb-4 text-white">Coding Club Reno</h1>
+      <p class="text-xl md:text-2xl mb-8 text-gray-200 max-w-xl mx-auto">Building community-driven, project-based learning experiences for aspiring developers.</p>
+      <a href="#projects" class="inline-block px-8 py-3 bg-gradient-to-r from-blue-500 to-indigo-500 text-white font-medium rounded-full shadow-lg hover:scale-105 transform transition">Get Started</a>
+    </div>
+    <div class="absolute bottom-8 w-full text-center">
+      <a href="#projects" class="animate-bounce inline-block">
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg>
       </a>
-  
-      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="home" class="nav-link px-2 text-white">Home</a></li>
-        <li><a href="about" class="nav-link px-2 text-white">About</a></li>
-        <!--<li><a href="projects.html" class="nav-link px-2 text-white">Projects</a></li>-->
-        <li><a href="service" class="nav-link px-2 text-white">Service</a></li>
-      </ul>
-      <div class="text-end">
-        <a href="join"><button type="button" class="btn btn-outline-light me-2">Join Now</button></a>
-        <button id="theme-toggle-button" onclick="switchMode()"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-moon-fill" viewBox="0 0 16 16">
-          <path d="M6 .278a.77.77 0 0 1 .08.858 7.2 7.2 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277q.792-.001 1.533-.16a.79.79 0 0 1 .81.316.73.73 0 0 1-.031.893A8.35 8.35 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.75.75 0 0 1 6 .278"/>
-        </svg></button>
+    </div>
+  </section>
+
+  <!-- Content Sections with SVG separators -->
+  <section id="projects" class="relative py-20 bg-white dark:bg-gray-900">
+    <svg class="absolute top-0 left-0 w-full" viewBox="0 0 1440 60" preserveAspectRatio="none"><path d="M0,60 C480,0 960,120 1440,60 L1440,0 L0,0 Z" fill="currentColor"/></svg>
+    <div class="container mx-auto px-6">
+      <div class="grid md:grid-cols-2 gap-12 items-center">
+        <div>
+          <h2 class="text-4xl font-bold mb-4">Weekly Challenges</h2>
+          <p class="text-lg mb-6">Engage in bite-sized projects every week to build real-world skills and expand your portfolio.</p>
+          <a href="join.html" class="px-5 py-2 bg-blue-600 text-white rounded-full hover:opacity-90 transition">Join a Challenge</a>
+        </div>
+        <div><img src="images/projectpic.jpg" alt="Projects" class="rounded-2xl shadow-xl hover:scale-105 transition-transform duration-500" loading="lazy"/></div>
       </div>
     </div>
-  </header>
-  <main class="container" id="main-header">
-    <h1>Coding Reno</h1>
-    <button class="button" id="scroll-button" onclick="scrollToMiddleBottom()">
-      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-arrow-bar-down" viewBox="0 0 16 16">
-        <path fill-rule="evenodd" d="M1 3.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5M8 6a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 0 1 .708-.708L7.5 12.293V6.5A.5.5 0 0 1 8 6"/>
-      </svg>
-    </button>
-  </main>
-    <div class="slides">
-      <div class="container marketing">
-        <!-- START THE FEATURETTES -->
+  </section>
 
-        <hr class="featurette-divider">
-        <div class="animate">
-          <div class="row featurette">
-            <div class="col-md-7">
-              <h2 class="featurette-heading fw-normal lh-1"><span class="first-word">Simple</span>, weekly based projects<span class="text-body-secondary"></span></h2>
-              <p class="lead">We believe that project based learning is the best way to develop skill as a programmer. Sometimes we even involve ourselves in volunteer projects for our community!</p>
-            </div>
-            <div class="col-md-5">
-              <img src="images/projectpic.jpg" alt="Hand Tracking Project">
-            </div>
-          </div>
-        </div>
-
-        <hr class="featurette-divider">
-        <div class="animate">
-          <div class="row featurette">
-            <div class="col-md-7 order-md-2">
-              <h2 class="featurette-heading fw-normal lh-1">Find a <span class="last-word">community</span><span class="text-body-secondary"></span></h2>
-              <p class="lead">Connect with us and find support on your programming journey.</p>
-            </div>
-            <div class="col-md-5 order-md-1">
-              <img src="images/communitypic.jpg" alt="Community">
-            </div>
-          </div>
-        </div>
-
-        <hr class="featurette-divider">
-        <div class="animate">
-          <div class="row featurette">
-            <div class="col-md-7">
-              <h2 class="featurette-heading fw-normal lh-1"><span class="first-word">Present</span> every week<span class="text-body-secondary"></span></h2>
-              <p class="lead">After completing the weekly projects, we show what we made on a group call or in person.</p>
-            </div>
-            <div class="col-md-5">
-              <img src="images/presentpic.png" alt="Community">
-            </div>
-          </div>
-        </div>
-
-        <hr class="featurette-divider">
+  <section id="community" class="py-20 bg-gray-50 dark:bg-gray-800">
+    <div class="container mx-auto px-6 grid md:grid-cols-2 gap-12 items-center">
+      <div class="order-2 md:order-1"><img src="images/communitypic.jpg" alt="Community" class="rounded-2xl shadow-xl hover:scale-105 transition-transform duration-500" loading="lazy"/></div>
+      <div class="order-1 md:order-2">
+        <h2 class="text-4xl font-bold mb-4">Inclusive Community</h2>
+        <p class="text-lg mb-6">Collaborate, mentor, and share feedback in a welcoming space designed for all skill levels.</p>
+        <a href="join.html" class="px-5 py-2 bg-indigo-600 text-white rounded-full hover:opacity-90 transition">Join Us</a>
       </div>
-      <!-- /END THE FEATURETTES -->
+    </div>
+  </section>
 
-    </div><!-- /.container -->
-    <footer>
-      <p>&copy; 2024 Coding Club Reno &middot; <a href="#"></p>
-    </footer>
-  </body>
-  </html>
+  <section id="present" class="py-20 bg-white dark:bg-gray-900">
+    <div class="container mx-auto px-6 grid md:grid-cols-2 gap-12 items-center">
+      <div>
+        <h2 class="text-4xl font-bold mb-4">Showcase Your Work</h2>
+        <p class="text-lg mb-6">Present completed projects on calls or meetups to refine your presentation and communication skills.</p>
+        <a href="join.html" class="px-5 py-2 bg-blue-500 text-white rounded-full hover:opacity-90 transition">Get on Stage</a>
+      </div>
+      <div><img src="images/presentpic.png" alt="Present" class="rounded-2xl shadow-xl hover:scale-105 transition-transform duration-500" loading="lazy"/></div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="py-12 text-center text-gray-600 dark:text-gray-400 text-sm">
+    <p>© <span x-text="new Date().getFullYear()"></span> Coding Club Reno. All rights reserved.</p>
+  </footer>
+
+  <!-- GSAP & Scroll Animations -->
+  <script>
+    gsap.registerPlugin(ScrollTrigger);
+    gsap.utils.toArray('.container').forEach(section => {
+      gsap.from(section, {
+        opacity: 0,
+        y: 50,
+        duration: 0.8,
+        scrollTrigger: { trigger: section, start: 'top 80%', once: true }
+      });
+    });
+    window.addEventListener('DOMContentLoaded', () => {
+      VANTA.NET({ el: '#vanta-bg', color: 0x6ee7b7, backgroundColor: null, scale:1.0, scaleMobile:1.0 });
+    });
+  </script>
+</body>
+</html>
