--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" x-data="{ darkMode: localStorage.getItem('theme') === 'dark' || (!localStorage.getItem('theme') && window.matchMedia('(prefers-color-scheme: dark)').matches), menuOpen: false, scrolled: false }" x-init="$watch('darkMode', val => localStorage.setItem('theme', val ? 'dark' : 'light'))" x-bind:class="{ 'dark': darkMode }" @scroll.window="scrolled = window.pageYOffset > 50">
+<html lang="en" x-data="{ menuOpen: false, scrolled: false }" @scroll.window="scrolled = window.pageYOffset > 50">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,7 +10,6 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
-      darkMode: 'class',
       theme: {
         extend: {
           fontFamily: {
@@ -61,17 +60,12 @@
       background: linear-gradient(135deg, rgba(16, 185, 129, 0.05) 0%, rgba(59, 130, 246, 0.1) 100%);
     } */
 
-    /* Glass morphism effect */
+    /* Glass morphism effect - Updated to dark theme default */
     .glass {
-      background: rgba(255, 255, 255, 0.05);
+      background: rgba(0, 0, 0, 0.2); /* Was dark .glass */
       backdrop-filter: blur(8px);
       -webkit-backdrop-filter: blur(8px);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-    }
-
-    .dark .glass {
-      background: rgba(0, 0, 0, 0.2);
-      border: 1px solid rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.05); /* Was dark .glass */
     }
 
     /* Canvas styling */
@@ -94,15 +88,11 @@
       box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
     }
 
-    /* Solid cards (removed gradient) */
+    /* Solid cards (removed gradient) - Updated to dark theme default */
     .solid-card {
-      background-color: rgba(255, 255, 255, 0.9); /* Light mode solid background */
+      background-color: rgba(31, 41, 55, 0.8); /* Was dark .solid-card (gray-800 with opacity) */
       border-radius: 1rem;
       box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-    }
-
-    .dark .solid-card {
-      background-color: rgba(31, 41, 55, 0.8); /* Dark mode solid background (gray-800 with opacity) */
     }
 
     /* Custom cursor */
@@ -147,23 +137,21 @@
     /* @keyframes gradient { ... } */
   </style>
 </head>
-<body class="bg-gray-50 text-gray-900 dark:bg-gray-900 dark:text-gray-100 font-sans">
+<body class="bg-gray-900 text-gray-100 font-sans">
   <div class="cursor" id="custom-cursor"></div>
 
   <!-- Navigation Bar - Now using glass morphism -->
  <nav class="fixed w-full top-0 z-50 transition-all duration-300" :class="{'glass shadow-lg': scrolled || menuOpen, 'bg-transparent': !scrolled && !menuOpen}">
     <div class="container mx-auto flex items-center justify-between px-6" :class="scrolled ? 'py-3' : 'py-5'">
       <a href="#hero" class="relative z-10 text-xl sm:text-2xl font-semibold tracking-tight flex items-center">
-        <span class="text-primary-600 dark:text-primary-400 mr-1">&#60;</span>
-        <!-- Removed gradient-text class -->
-        <span class="text-primary-600 dark:text-primary-400">Coding Reno</span>
-        <span class="text-primary-600 dark:text-primary-400 ml-1">&#62;</span>
+        <span class="text-primary-400 mr-1">&#60;</span>
+        <span class="text-primary-400">Coding Reno</span>
+        <span class="text-primary-400 ml-1">&#62;</span>
       </a>
       <div class="hidden md:flex items-center space-x-8">
-        <a href="#projects" class="text-sm font-medium hover:text-primary-600 dark:hover:text-primary-400 transition">Projects</a>
-        <a href="#community" class="text-sm font-medium hover:text-primary-600 dark:hover:text-primary-400 transition">Community</a>
-        <a href="#present" class="text-sm font-medium hover:text-primary-600 dark:hover:text-primary-400 transition">Present</a>
-        <!-- Replaced gradient with solid background -->
+        <a href="#projects" class="text-sm font-medium hover:text-primary-400 transition">Projects</a>
+        <a href="#community" class="text-sm font-medium hover:text-primary-400 transition">Community</a>
+        <a href="#present" class="text-sm font-medium hover:text-primary-400 transition">Present</a>
         <a href="join.html" class="pill-button text-sm px-6 py-2.5 bg-primary-500 hover:bg-primary-600 text-white rounded-full shadow-lg hover:shadow-xl transition">Join Now</a>
       </div>
       <button @click="menuOpen = !menuOpen" class="md:hidden focus:outline-none">
@@ -173,29 +161,14 @@
         </svg>
       </button>
     </div>
-    <div x-show="menuOpen" x-transition class="glass px-6 py-5 space-y-4 md:hidden">
-      <a href="#projects" @click="menuOpen = false" class="block font-medium hover:text-primary-600 dark:hover:text-primary-400 transition">Projects</a>
-      <a href="#community" @click="menuOpen = false" class="block font-medium hover:text-primary-600 dark:hover:text-primary-400 transition">Community</a>
-      <a href="#present" @click="menuOpen = false" class="block font-medium hover:text-primary-600 dark:hover:text-primary-400 transition">Present</a>
-      <!-- Replaced gradient with solid background -->
-      <a href="join.html" @click="menuOpen = false" class="pill-button block text-center px-6 py-2.5 bg-primary-500 hover:bg-primary-600 text-white rounded-full shadow-lg hover:shadow-xl transition">Join Now</a>
-    </div>
   </nav>
 
   <!-- Keep this mobile menu block -->
-  <div x-show="menuOpen" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 -translate-y-1" x-transition:enter-end="opacity-100 translate-y-0" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100 translate-y-0" x-transition:leave-end="opacity-0 -translate-y-1" class="glass px-6 py-5 space-y-4 md:hidden fixed top-0 left-0 w-full pt-20 mt-0 bg-gray-50 dark:bg-gray-900">
-    <a href="#projects" @click="menuOpen = false" class="block font-medium hover:text-primary-600 dark:hover:text-primary-400 transition">Projects</a>
-    <a href="#community" @click="menuOpen = false" class="block font-medium hover:text-primary-600 dark:hover:text-primary-400 transition">Community</a>
-    <a href="#present" @click="menuOpen = false" class="block font-medium hover:text-primary-600 dark:hover:text-primary-400 transition">Present</a>
-    <!-- Replaced gradient with solid background -->
+  <div x-show="menuOpen" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 -translate-y-1" x-transition:enter-end="opacity-100 translate-y-0" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100 translate-y-0" x-transition:leave-end="opacity-0 -translate-y-1" class="glass px-6 py-5 space-y-4 md:hidden fixed top-0 left-0 w-full pt-20 mt-0 bg-gray-900">
+    <a href="#projects" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Projects</a>
+    <a href="#community" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Community</a>
+    <a href="#present" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Present</a>
     <a href="join.html" @click="menuOpen = false" class="pill-button block text-center px-6 py-2.5 bg-primary-500 hover:bg-primary-600 text-white rounded-full shadow-lg hover:shadow-xl transition">Join Now</a>
-    <button @click="darkMode = !darkMode" class="flex items-center justify-between w-full mt-4 py-2 space-x-2">
-      <span>Toggle Theme</span>
-      <div class="p-1.5 rounded-full bg-gray-200 dark:bg-gray-700">
-        <svg x-show="!darkMode" xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" /></svg>
-        <svg x-show="darkMode" xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" /></svg>
-      </div>
-    </button>
   </div>
 
   <!-- Hero Section with enhanced 3D particles -->
@@ -208,14 +181,12 @@
       </div>
       <h1 class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-bold mb-6 text-white hero-text" data-scroll-speed="0.1">
         <span class="block">Where Developers</span>
-        <!-- Replaced gradient-text with solid color -->
         <span class="text-primary-400">Grow Together</span>
       </h1>
       <p class="text-lg md:text-xl mb-10 text-gray-200 max-w-xl mx-auto hero-text opacity-90" data-scroll-speed="0.05">
         Building community-driven, project-based learning experiences for developers of all skill levels in Reno.
       </p>
       <div class="flex flex-col sm:flex-row justify-center gap-4">
-        <!-- Replaced gradient with solid background -->
         <a href="#projects" class="pill-button inline-block px-8 py-3.5 bg-primary-500 hover:bg-primary-600 text-white font-medium rounded-full shadow-lg hover:shadow-xl transition">
           Explore Projects
         </a>
@@ -232,19 +203,16 @@
   </section>
 
   <!-- Updated Projects Section -->
-<section id="projects" class="relative py-24 bg-white dark:bg-gray-900">
-  <!-- Removed top gradient overlay -->
-  <!-- <div class="absolute top-0 left-0 w-full h-20 bg-gradient-to-b from-black/10 to-transparent"></div> -->
+<section id="projects" class="relative py-24 bg-gray-900">
   <div class="container mx-auto px-6">
     <div class="text-center mb-16">
-      <span class="inline-block px-3 py-1 rounded-full bg-primary-100 dark:bg-primary-900/30 text-primary-600 dark:text-primary-400 text-sm font-medium mb-4">Code Challenges & Projects</span>
+      <span class="inline-block px-3 py-1 rounded-full bg-primary-900/30 text-primary-400 text-sm font-medium mb-4">Code Challenges & Projects</span>
       <h2 class="text-3xl md:text-4xl font-bold mb-4">Hands-On Learning Opportunities</h2>
-      <p class="text-lg text-gray-600 dark:text-gray-400 max-w-2xl mx-auto">
+      <p class="text-lg text-gray-400 max-w-2xl mx-auto">
         From algorithmic puzzles to full-stack website builds and library deep dives, our members tackle a variety of real-world tasks to grow their skills.
       </p>
     </div>
     <div class="grid md:grid-cols-3 gap-8">
-      <!-- Challenge Card - Replaced gradient-card with solid-card, updated icon bg -->
       <div class="solid-card p-6 hover-lift">
         <div class="w-12 h-12 mb-4 rounded-lg bg-secondary-500 flex items-center justify-center text-white">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -252,17 +220,16 @@
           </svg>
         </div>
         <h3 class="text-xl font-semibold mb-2">Code Challenges</h3>
-        <p class="text-gray-600 dark:text-gray-400 mb-4">
+        <p class="text-gray-400 mb-4">
           Sharpen your problem-solving with algorithmic puzzles on Codewars, LeetCode, and HackerRank.
         </p>
-        <a href="#" class="inline-flex items-center text-primary-600 dark:text-primary-400 font-medium">
+        <a href="#" class="inline-flex items-center text-primary-400 font-medium">
           Learn more
           <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
           </svg>
         </a>
       </div>
-      <!-- Website Project Card - Replaced gradient-card with solid-card, updated icon bg -->
       <div class="solid-card p-6 hover-lift">
         <div class="w-12 h-12 mb-4 rounded-lg bg-secondary-500 flex items-center justify-center text-white">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -270,26 +237,25 @@
           </svg>
         </div>
         <h3 class="text-xl font-semibold mb-2">Website Projects</h3>
-        <p class="text-gray-600 dark:text-gray-400 mb-4">
+        <p class="text-gray-400 mb-4">
           Build responsive, interactive websites using HTML, CSS, JavaScript, and frameworks like React and Vue.
         </p>
-        <a href="#" class="inline-flex items-center text-primary-600 dark:text-primary-400 font-medium">
+        <a href="#" class="inline-flex items-center text-primary-400 font-medium">
           Learn more
           <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
           </svg>
         </a>
       </div>
-      <!-- Library Exploration Card -->
       <div class="solid-card p-6 hover-lift">
         <div class="w-12 h-12 mb-4 rounded-lg bg-secondary-500 flex items-center justify-center text-white">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" /> </svg>
         </div>
         <h3 class="text-xl font-semibold mb-2">Library Explorations</h3>
-        <p class="text-gray-600 dark:text-gray-400 mb-4">
+        <p class="text-gray-400 mb-4">
           Dive into libraries like D3.js, Three.js, Tailwind CSS, and more to expand your toolkit and creativity.
         </p>
-        <a href="#" class="inline-flex items-center text-primary-600 dark:text-primary-400 font-medium">
+        <a href="#" class="inline-flex items-center text-primary-400 font-medium">
           Learn more
           <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
@@ -307,7 +273,7 @@
 
 
   <!-- Community Section -->
-  <section id="community" class="py-24 bg-gray-50 dark:bg-gray-800 relative overflow-hidden">
+  <section id="community" class="py-24 bg-gray-800 relative overflow-hidden">
     <div class="container mx-auto px-6 relative z-10">
       <div class="grid md:grid-cols-2 gap-12 lg:gap-20 items-center">
         <div class="order-2 md:order-1 relative">
@@ -315,38 +281,37 @@
         </div>
 
         <div class="order-1 md:order-2">
-          <span class="inline-block px-3 py-1 rounded-full bg-secondary-100 dark:bg-secondary-900/30 text-secondary-600 dark:text-secondary-400 text-sm font-medium mb-4">Community</span>
+          <span class="inline-block px-3 py-1 rounded-full bg-secondary-900/30 text-secondary-400 text-sm font-medium mb-4">Community</span>
           <h2 class="text-3xl md:text-4xl font-bold mb-6">Grow Together in a Supportive Space</h2>
-          <p class="text-lg text-gray-600 dark:text-gray-400 mb-8">Join a community of passionate developers where you can collaborate, mentor others, and receive valuable feedback in a welcoming environment designed for all skill levels.</p>
+          <p class="text-lg text-gray-400 mb-8">Join a community of passionate developers where you can collaborate, mentor others, and receive valuable feedback in a welcoming environment designed for all skill levels.</p>
 
           <!-- Community Features -->
           <div class="space-y-4 mb-8">
             <div class="flex items-start">
-              <div class="flex-shrink-0 mt-1 bg-secondary-100 dark:bg-secondary-900/30 rounded-full p-1">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-secondary-600 dark:text-secondary-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <div class="flex-shrink-0 mt-1 bg-secondary-900/30 rounded-full p-1">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-secondary-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z" />
                 </svg>
               </div>
               <div class="ml-4">
                 <h3 class="text-lg font-medium">Peer Mentorship</h3>
-                <p class="text-gray-600 dark:text-gray-400">Learn from experienced developers and help others along their journey.</p>
+                <p class="text-gray-400">Learn from experienced developers and help others along their journey.</p>
               </div>
             </div>
 
             <div class="flex items-start">
-              <div class="flex-shrink-0 mt-1 bg-secondary-100 dark:bg-secondary-900/30 rounded-full p-1">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-secondary-600 dark:text-secondary-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <div class="flex-shrink-0 mt-1 bg-secondary-900/30 rounded-full p-1">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-secondary-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
                 </svg>
               </div>
               <div class="ml-4">
                 <h3 class="text-lg font-medium">Weekly Discussions</h3>
-                <p class="text-gray-600 dark:text-gray-400">Engage in thought-provoking discussions about the latest tech trends.</p>
+                <p class="text-gray-400">Engage in thought-provoking discussions about the latest tech trends.</p>
               </div>
             </div>
           </div>
 
-          <!-- Replaced gradient with solid background -->
           <a href="join.html" class="pill-button inline-block px-8 py-3.5 bg-secondary-500 hover:bg-secondary-600 text-white font-medium rounded-full shadow-lg hover:shadow-xl transition">
             Join Our Community
           </a>
@@ -375,7 +340,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="py-12 text-center text-gray-600 dark:text-gray-400 text-sm">
+  <footer class="py-12 text-center text-gray-400 text-sm">
     <p>© <span x-text="new Date().getFullYear()"></span> Coding Reno. All rights reserved.</p>
   </footer>
 
